--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- дарова долбаеб я знал что ты в код полезеш, ну удачи хех -->
+<!-- дарова, я знал что ты в код полезеш, ну удачи хех -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -383,7 +383,7 @@
     <div class="container">
         <div class="profile">
             <div class="photo-container">
-                <!-- не забыть ту хуйню убрать -->
+                <!-- не забыть тот текст убрать -->
                 <div>Тут будет изображение, но чуть позже</div>
                 <!-- <img src="your-photo.jpg" alt="тест"> -->
             </div>
@@ -513,11 +513,11 @@
             <div class="visitor-counter">
                 <div class="counter-item">
                     <span class="counter-icon">👁️</span>
-                    <span id="currentVisitors">1</span> сейчас на сайте
+                    <span id="currentVisitors">1</span>is currently online
                 </div>
                 <div class="counter-item">
                     <span class="counter-icon">👥</span>
-                    <span id="totalVisitors">1</span> всего посетителей
+                    <span id="totalVisitors">1</span>visited the site in total
                 </div>
             </div>
         </div>
