--- a/profiles/jsheilt.html
+++ b/profiles/jsheilt.html
@@ -480,12 +480,12 @@
     <nav class="nav">
         <div class="nav-container">
             <ul class="nav-list">
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html">Главная</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html#games-page">Игры</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html#catalog-page">Каталог</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html#avatars-page">Аватары</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html#forum-page">Форум</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox.html#help-page">Помощь</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox">Главная</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#games-page">Игры</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#catalog-page">Каталог</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#avatars-page">Аватары</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#forum-page">Форум</a></li>
+                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#help-page">Помощь</a></li>
             </ul>
         </div>
     </nav>
@@ -533,6 +533,10 @@
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">В Roblox с:</div>
                         <div>21 июля 2024</div>
+                    </div>
+					<div style="margin-bottom: 10px;">
+                        <div style="font-weight: bold; color: #2c6cac;">В OldRobox с:</div>
+                        <div>08 августа 2024</div>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">Посещено мест:</div>
