--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testing index.html</title>
+    <title>choice</title>
     <style>
         body {
             display: flex;
@@ -14,6 +14,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            position: relative;
         }
 
         .button {
@@ -33,11 +34,20 @@
         .button:hover {
             background-color: #3367D6;
         }
+        
+        .copyright {
+            position: absolute;
+            bottom: 20px;
+            color: #666;
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
     <a href="https://cmdwindows.github.io/bio" class="button">Перейти в Bio</a>
     <a href="https://cmdwindows.github.io/oldrobox" class="button">Перейти в OldRobox</a>
     <a href="https://cmdwindows.github.io/urls/perenapravlenie_v_tg_bota" class="button">Написать sheilt'у</a>
+    
+    <div class="copyright">© 2022-2025 sheilt, inc.</div>
 </body>
 </html>
