--- a/oldrobox.html
+++ b/oldrobox.html
@@ -1056,7 +1056,7 @@
                     avatar: 'https://tr.rbxcdn.com/30DAY-AvatarHeadshot-DC9C090E32524185789B9FDE6FE250D6-Png/150/150/AvatarHeadshot/Webp/noFilter',
                     role: 'Создатель OldRobox',
                     roleClass: 'creator-badge',
-                    profileLink: 'https://example.com'
+                    profileLink: 'https://sheiltproject.online/profiles/jsheilt'
                 }
             },
             2: {
@@ -1068,7 +1068,7 @@
                     avatar: 'https://tr.rbxcdn.com/30DAY-AvatarHeadshot-DC9C090E32524185789B9FDE6FE250D6-Png/150/150/AvatarHeadshot/Webp/noFilter',
                     role: 'Создатель OldRobox',
                     roleClass: 'creator-badge',
-                    profileLink: 'https://example.com'
+                    profileLink: 'https://sheiltproject.online/profiles/jsheilt'
                 }
             },
             3: {
@@ -1080,7 +1080,7 @@
                     avatar: 'https://tr.rbxcdn.com/30DAY-AvatarHeadshot-DC9C090E32524185789B9FDE6FE250D6-Png/150/150/AvatarHeadshot/Webp/noFilter',
                     role: 'Создатель OldRobox',
                     roleClass: 'creator-badge',
-                    profileLink: 'https://example.com'
+                    profileLink: 'https://sheiltproject.online/profiles/jsheilt'
                 }
             },
             4: {
@@ -1092,7 +1092,7 @@
                     avatar: 'https://tr.rbxcdn.com/30DAY-AvatarHeadshot-FCAA8AAC83A71D8CB640B670114A18B9-Png/150/150/AvatarHeadshot/Webp/noFilter',
                     role: 'Помощник JavaScript',
                     roleClass: 'js-badge',
-                    profileLink: 'https://example.com'
+                    profileLink: 'https://sheiltproject.online/profiles/jklassjklaasjkl'
                 }
             }
         };
