--- a/profiles/jsheilt.html
+++ b/profiles/jsheilt.html
@@ -464,7 +464,7 @@
 <body>
     <header class="header">
         <div class="header-container">
-            <a href="https://cmdwindows.github.io/oldrobox.html" class="logo">
+            <a href="https://sheiltproject.online/oldrobox" class="logo">
                 <svg width="40" height="40" viewBox="0 0 40 40">
                     <rect x="5" y="5" width="30" height="30" rx="5" fill="#ff8c00"/>
                     <circle cx="15" cy="15" r="5" fill="white"/>
@@ -480,12 +480,12 @@
     <nav class="nav">
         <div class="nav-container">
             <ul class="nav-list">
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox">Главная</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#games-page">Игры</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#catalog-page">Каталог</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#avatars-page">Аватары</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#forum-page">Форум</a></li>
-                <li class="nav-item"><a href="https://cmdwindows.github.io/oldrobox#help-page">Помощь</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox">Главная</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox#games-page">Игры</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox#catalog-page">Каталог</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox#avatars-page">Аватары</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox#forum-page">Форум</a></li>
+                <li class="nav-item"><a href="https://sheiltproject.online/oldrobox#help-page">Помощь</a></li>
             </ul>
         </div>
     </nav>
@@ -764,10 +764,10 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-nav">
-                <a href="https://cmdwindows.github.io/oldrobox.html#about-page">О нас</a>
-                <a href="https://cmdwindows.github.io/oldrobox.html#rules-page">Правила</a>
-                <a href="https://cmdwindows.github.io/oldrobox.html#privacy-page">Конфиденциальность</a>
-                <a href="https://cmdwindows.github.io/bio.html">Поддержка</a>
+                <a href="https://sheiltproject.online/oldrobox#about-page">О нас</a>
+                <a href="https://sheiltproject.online/oldrobox#rules-page">Правила</a>
+                <a href="https://sheiltproject.online/oldrobox#privacy-page">Конфиденциальность</a>
+                <a href="https://sheiltproject.online/bio">Поддержка</a>
             </div>
             <div class="copyright">
                 © 2025 OldRobox. Все права защищены. Ностальгический проект, не связан с Roblox Corporation и не подлежит ему.
