--- a/profiles/jklassjklaasjkl.html
+++ b/profiles/jklassjklaasjkl.html
@@ -494,7 +494,7 @@
         <div class="profile-sidebar">
             <div class="profile-card">
                 <div class="avatar">
-                    <img src="https://tr.rbxcdn.com/30DAY-Avatar-FCAA8AAC83A71D8CB640B670114A18B9-Png/352/352/Avatar/Png/noFilter" alt="jklassjklaasjkl avatar">
+                    <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-FCAA8AAC83A71D8CB640B670114A18B9-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="jklassjklaasjkl avatar">
                 </div>
                 <div class="username">jklassjklaasjkl</div>
                 <div class="display-name">(@jklassjklaasjkl)</div>
@@ -536,7 +536,7 @@
                     </div>
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">В OldRobox с:</div>
-                        <div>30 августа 2025</div>
+                        <div>31 августа 2025</div>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">Посещено мест:</div>
@@ -544,7 +544,7 @@
                     </div>
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">Страна:</div>
-                        <div>Unknown</div>
+                        <div>Ukraine</div>
                     </div>
                 </div>
             </div>
