--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </style>
 </head>
 <body>
-    <a href="https://cmdwindows.github.io/bio" class="button">Перейти в Bio</a>
-    <a href="https://cmdwindows.github.io/oldrobox" class="button">Перейти в OldRobox</a>
+    <a href="https://cmdwindows.github.io/urls/bio" class="button">Перейти в Bio</a>
+    <a href="https://cmdwindows.github.io/urls/oldrobox" class="button">Перейти в OldRobox</a>
     <a href="https://cmdwindows.github.io/urls/perenapravlenie_v_tg_bota" class="button">Написать sheilt'у</a>
     
     <div class="copyright">© 2022-2025 sheilt, inc.</div>
