--- a/oldrobox.html
+++ b/oldrobox.html
@@ -1013,7 +1013,6 @@
         </div>
     </main>
     
-    <!-- Футер -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-nav">
@@ -1208,7 +1207,7 @@
 
         document.getElementById('support-link').addEventListener('click', function(e) {
             e.preventDefault();
-            window.open('https://cmdwindows.github.io', '_blank');
+            window.open('https://https://sheiltproject.online/urls/bio', '_blank');
         });
 
         document.querySelectorAll('.footer-nav a[data-page]').forEach(link => {
