--- a/profiles/jklassjklaasjkl.html
+++ b/profiles/jklassjklaasjkl.html
@@ -528,7 +528,7 @@
                 <div style="text-align: left; margin-top: 15px;">
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">Статус:</div>
-                        <div>Новый пользователь OldRobox</div>
+                        <div>Помощник JavaScript</div>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <div style="font-weight: bold; color: #2c6cac;">В Roblox с:</div>
