--- a/profiles/jsheilt.html
+++ b/profiles/jsheilt.html
@@ -767,7 +767,7 @@
                 <a href="https://sheiltproject.online/oldrobox#about-page">О нас</a>
                 <a href="https://sheiltproject.online/oldrobox#rules-page">Правила</a>
                 <a href="https://sheiltproject.online/oldrobox#privacy-page">Конфиденциальность</a>
-                <a href="https://sheiltproject.online/urls/bio">Поддержка</a>
+                <a href="https://sheiltproject.online/urls/perenapravlenie_v_tg_bota.html">Поддержка</a>
             </div>
             <div class="copyright">
                 © 2025 OldRobox. Все права защищены. Ностальгический проект, не связан с Roblox Corporation и не подлежит ему.
