--- a/oldrobox.html
+++ b/oldrobox.html
@@ -1207,7 +1207,7 @@
 
         document.getElementById('support-link').addEventListener('click', function(e) {
             e.preventDefault();
-            window.open('https://sheiltproject.online/urls/bio', '_blank');
+            window.open('https://sheiltproject.online/urls/perenapravlenie_v_tg_bota.html', '_blank');
         });
 
         document.querySelectorAll('.footer-nav a[data-page]').forEach(link => {
