--- a/urls/telegramchannel.html
+++ b/urls/telegramchannel.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1; url=https://sheiltonov.t.me">
+    <title>Перенаправление...</title>
+</head>
+<body>
+    <p>Перенаправление...</p>
+</body>
+</html>
