--- a/urls/oldrobox.html
+++ b/urls/oldrobox.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1; url=https://sheiltproject.online/oldrobox">
-    <title>Перенаправление...</title>
+    <meta http-equiv="refresh" content="1; url=https://radika1.link/2025/10/31/ilvlrbebb2479032912ac.png">
+    <title>Перенаправление..</title>
 </head>
 <body>
-    <p>Перенаправление...</p>
+    <p>Перенаправление..</p>
 </body>
 </html>
