--- a/vdshift/index.html
+++ b/vdshift/index.html
@@ -508,7 +508,7 @@
             <ul class="changelog-list">
                 <li class="changelog-item">
                     <div class="changelog-version">betatest_0.2</div>
-                    <div class="changelog-date">Ноябрь 2025</div>
+                    <div class="changelog-date">24 Ноябрь 2025</div>
                     <div class="changelog-desc">
                         <ul style="padding-left: 20px; opacity: 0.9;">
                             <li>Новая система защиты от изменения времени</li>
@@ -521,7 +521,7 @@
                 </li>
                 <li class="changelog-item">
                     <div class="changelog-version">betatest_0.1</div>
-                    <div class="changelog-date">Октябрь 2025</div>
+                    <div class="changelog-date">16 Ноябрь 2025</div>
                     <div class="changelog-desc">
                         <ul style="padding-left: 20px; opacity: 0.7;">
                             <li>Первая бета-версия программы</li>
