--- a/vdshift/index.html
+++ b/vdshift/index.html
@@ -383,7 +383,7 @@
     <div class="container">
         <section class="hero">
             <div class="logo">VDShift</div>
-            <div class="version-badge">Версия betatest_0.2</div>
+            <div class="version-badge">Версия betatest_0.2.1</div>
             <h1>Автоматический Shift для Violence District</h1>
             <p class="hero-tagline">Хорошое решение для автоматического бега в VD.</p>
         </section>
@@ -430,19 +430,19 @@
                 Выберите предпочтительный способ загрузки последней версии betatest_0.2
             </p>
             <div class="download-grid">
-                <a href="https://github.com/cmdwindows/vdshiftfiles/releases/download/vdshift/ShiftForVDbetatest0.2.zip" class="download-card card-direct" target="_blank">
+                <a href="https://github.com/cmdwindows/vdshiftfiles/releases/download/betatest0.2.1/ShiftForVDbetatest0.2.1.zip" class="download-card card-direct" target="_blank">
                     <div class="download-icon">📥</div>
                     <div class="download-title">Прямая загрузка</div>
                     <div class="download-desc">Скачайте напрямую с нашего сервера</div>
                 </a>
                 
-                <a href="https://cloud.mail.ru/public/vwy6/7RzFsso2f" class="download-card card-cloud" target="_blank">
+                <a href="https://cloud.mail.ru/public/X82A/k5TxfoDik" class="download-card card-cloud" target="_blank">
                     <div class="download-icon">☁️</div>
                     <div class="download-title">Cloud Mail.ru</div>
                     <div class="download-desc">Альтернативное зеркало для загрузки</div>
                 </a>
                 
-                <a href="https://t.me/s/sheiltonov/4305" class="download-card card-telegram" target="_blank">
+                <a href="https://t.me/s/sheiltonov/4314" class="download-card card-telegram" target="_blank">
                     <div class="download-icon">✈️</div>
                     <div class="download-title">Telegram</div>
                     <div class="download-desc">Загрузка через Telegram канал</div>
@@ -453,6 +453,18 @@
         <section id="changelog" class="section">
             <h2 class="section-title">История обновлений</h2>
             <ul class="changelog-list">
+                <li class="changelog-item">
+                    <div class="changelog-version">betatest_0.2.1</div>
+                    <div class="changelog-date">25 Ноябрь 2025</div>
+                    <div class="changelog-desc">
+                        <ul style="padding-left: 20px; opacity: 0.9;">
+                            <li>Улучшена защита от изменения системного времени</li>
+                            <li>Исправлены ошибки с оверлеем прицела</li>
+                            <li>Добавлена интеграция с Discord RPC</li>
+                            <li>Исправлены мелкие ошибки и улучшена стабильность</li>
+                        </ul>
+                    </div>
+                </li>
                 <li class="changelog-item">
                     <div class="changelog-version">betatest_0.2</div>
                     <div class="changelog-date">24 Ноябрь 2025</div>
